Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134035

tst_qquickdeferred crashing

    XMLWordPrintable

Details

    • 5426df2fc (dev), b9dc9c4cb (6.9)

    Description

      https://testresults.qt.io/logs/qt/qtdeclarative/917faa4759f36a5644552a82f825bef1303df616/LinuxRHEL_9_4x86_64LinuxRHEL_9_4x86_64GCCqtci-linux-RHEL-9.4-x86_64-50-b2ce0bGenerateSBOM_InstallQt5Dependencies_Sccache_UseConfigure_VerifySBOM/47741855a887fe826241a91e01212b96f41509b6/test_1740393645/log.txt.gz

      https://testresults.qt.io/grafana/d/d8bebf9c-6e1c-4bff-a214-8d506943f23c/new-flaky-crashed-failed-tests?var-group_by_interval=1d&orgId=1&from=now-30d&to=now&timezone=browser&var-branch=1&var-test_case_n=510&var-test_function_n=$__all

      agent:2025/02/24 10:53:43 build.go:404: QDEBUG : tst_qquickdeferred::noSpuriousBinding() qml: hi
      agent:2025/02/24 10:53:43 build.go:404: PASS   : tst_qquickdeferred::noSpuriousBinding()
      agent:2025/02/24 10:53:43 build.go:404: malloc_consolidate(): unaligned fastbin chunk detected
      agent:2025/02/24 10:53:43 build.go:404: Received signal 6 (SIGABRT)
      agent:2025/02/24 10:53:43 build.go:404:          abortedIncubation function time: 156ms, total time: 190ms
      
      The test tst_qquickdeferred failed due to a timeout and a crash caused by an unaligned fastbin chunk detected, leading to a SIGABRT signal. This suggests a potential memory corruption issue, which is not directly related to the changes made in the context menu or text editing controls.
      
      Failed Platform:
      rhel-9.4
      

      This has happened at least a couple of times now, and is one of the things blocking integration of the rest of the ContextMenu patches.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes